--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Web Services APIs</title>
     <link rel="stylesheet" href="css/geo-ws.css">
+    <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css" />
 </head>
 
 <body>
@@ -19,6 +20,7 @@
        </form> 
     </div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
     <script src="http://documentcloud.github.com/underscore/underscore-min.js"></script>
     <script src="http://documentcloud.github.com/backbone/backbone-min.js"></script>
     
@@ -58,12 +60,29 @@
       <% var t = model.get("type");
          var p = model.get("pattern");
          var h = model.get("placeholder");
+         var r = model.get("required");
+         var d = model.get("description");
+         var m = model.get("multiple");
+         if(m){
+            print('<div id="multiple-container-'+id+'">'); 
+         } else {
+            print('<div id="container-'+id+'">'); 
+         }
          switch(t){
             case 'string':
-              print('<input type="text" id="parameter-'+id+'" name="'+name+'" value="" size="60"'+(p?' pattern="'+p+'"':'')+(h?' placeholder="'+h+'"':'')+'/>');   
+              print('<input type="text" id="parameter-'+id+'" name="'+name+'" value="" size="60"'+(p?' pattern="'+p+'"':'')+(h?' placeholder="'+h+'"':'')+(r?' required':'')+' title="'+d+'"/>');   
+              if(m){
+                print('<button type="button" name="add-parameter-'+id+'" id="add-parameter-'+id+'" class="add-parameter">Add</button>');
+              }
               break;
             default:
-              print('<input type="text" id="parameter-'+id+'" name="'+name+'" value="" size="60"'+(p?' pattern="'+p+'"':'')+(h?' placeholder="'+h+'"':'')+'/>');
+              print('<input type="text" id="parameter-'+id+'" name="'+name+'" value="" size="60"'+(p?' pattern="'+p+'"':'')+(h?' placeholder="'+h+'"':'')+(r?' required':'')+'title="'+d+'"/>');
+              if(m){
+                print('<button type="button" name="add-parameter-'+id+'" id="add-parameter-'+id+'" class="add-parameter">Add</button>');
+              }
+         }
+         if(m){
+            print('</div>'); 
          }
       %>
     </script>
