--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </div>
         </div>
         <div id="instance-action-<%= id %>" class="instance-action">
-            <button name="exec-instance-<%= id %>" id="exec-instance-<%= id %>" class="exec">
+            <button name="exec-instance-<%= id %>" id="exec-instance-<%= id %>" class="exec" disabled>
                 Execute
             </button>
             <button name="remove-instance-<%= id %>" id="remove-instance-<%= id %>" class="delete">
