--- a/index.html
+++ b/index.html
@@ -10,18 +10,26 @@
 </head>
 
 <body>
-    <div class="wrapper">
-       <form id="form-ws">
-           <ol id="instances-container">
-           </ol>
-           <div class="actions">
-               <button name="add-instance" id="add-instance">
-                   Add new
-               </button>
-           </div>
-       </form> 
+    <div class="wrapper ui-widget">
+        <header class="ui-widget-header ui-corner-tl ui-corner-tr">
+            <h1>Google Maps Web Services APIs</h1>
+        </header>
+        <div class="ui-widget-content ui-corner-bl ui-corner-br">
+           <form id="form-ws">
+               <ol id="instances-container">
+               </ol>
+               <div class="actions">
+                   <button name="add-instance" id="add-instance">
+                       Add new
+                   </button>
+                   <button name="edit-config" id="edit-config">
+                       <span class="ui-icon ui-icon-wrench"></span>Settings
+                   </button>
+               </div>
+           </form> 
+        </div>    
     </div>
-    <div class="#config"></div>
+    <div id="config"></div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
     <script src="http://documentcloud.github.com/underscore/underscore-min.js"></script>
@@ -93,22 +101,17 @@
     <script id="configTemplate" type="text/template">
         <fieldset class="app-config-fs">
             <legend>Settings</legend>
-            <label for="app-config-api-key">API key</label>
-            <input type="text" name="app-config-api-key" id="app-config-api-key" value="" placeholder="" />
-            <label for="app-config-client-id">Client ID</label>
-            <input type="text" name="app-config-client-id" id="app-config-client-id" value="" placeholder="" />
-            <label for="app-config-crypto-key">Crypto Key</label>
-            <input type="text" name="app-config-crypto-key" id="app-config-crypto-key" value="" placeholder="" />
-            <label for="app-config-server-url">Server URL</label>
-            <input type="text" name="app-config-server-url" id="app-config-server-url" value="" placeholder="" />
-            <label for="app-config-sign-url">Sign URL</label>
-            <input type="text" name="app-config-sign-url" id="app-config-sign-url" value="" placeholder="" />
+            <label for="app-config-api-key">API key</label><br/>
+            <input type="text" name="app-config-api-key" id="app-config-api-key" value="<%= API_KEY %>" placeholder="Please enter your API key" size="40" /><br/>
+            <label for="app-config-client-id">Client ID</label><br/>
+            <input type="text" name="app-config-client-id" id="app-config-client-id" value="<%= CLIENT_ID %>" placeholder="Please enter your client ID" size="40" /><br/>
+            <label for="app-config-crypto-key">Crypto Key</label><br/>
+            <input type="text" name="app-config-crypto-key" id="app-config-crypto-key" value="<%= CRYPTO_KEY %>" placeholder="Please enter your Crypto Key" size="40" /><br/>
+            <label for="app-config-server-url">Server URL</label><br/>
+            <input type="text" name="app-config-server-url" id="app-config-server-url" value="<%= SERVER_URL %>" placeholder="Please enter URL for server-side" size="40" /><br/>
+            <label for="app-config-sign-url">Sign URL</label><br/>
+            <input type="text" name="app-config-sign-url" id="app-config-sign-url" value="<%= SIGN_URL %>" placeholder="Please enter URL for digital sign" size="40" />
         </fieldset>
-        <div id="app-config-action" class="app-config-action">
-            <button name="save-config" id="save-config" class="save">
-                Save
-            </button>
-        </div>
     </script>
     
     <script src="js/geo-ws-model.js"></script>
