--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                 Remove
             </button>
         </div>
+        <span class="ui-icon ui-icon-carat-2-n-s ws-toggle"></span>
     </script>
     
     <!-- external template -->
