--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@
             <input type="text" name="app-config-client-id" id="app-config-client-id" value="<%= CLIENT_ID %>" placeholder="Please enter your client ID" size="40" /><br/>
             <label for="app-config-crypto-key">Crypto Key</label><br/>
             <input type="text" name="app-config-crypto-key" id="app-config-crypto-key" value="<%= CRYPTO_KEY %>" placeholder="Please enter your Crypto Key" size="40" /><br/>
+            <label for="app-config-places-api-key">Places for Work API key</label><br/>
+            <input type="text" name="app-config-places-api-key" id="app-config-places-api-key" value="<%= PLACES_API_KEY %>" placeholder="Please enter your Places for Work API key" size="40" /><br/>
             <label for="app-config-server-url">Server URL</label><br/>
             <input type="text" name="app-config-server-url" id="app-config-server-url" value="<%= SERVER_URL %>" placeholder="Please enter URL for server-side" size="40" /><br/>
             <label for="app-config-sign-url">Sign URL</label><br/>
