--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <script src="http://documentcloud.github.com/underscore/underscore-min.js"></script>
     <script src="http://documentcloud.github.com/backbone/backbone-min.js"></script>
     <script src="js/chosen.jquery.min.js"></script>
+    <script src="js/jquery.blockUI.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.3/highlight.min.js"></script>
     
     <!-- external template -->
