--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
     <script src="http://documentcloud.github.com/underscore/underscore-min.js"></script>
     <script src="http://documentcloud.github.com/backbone/backbone-min.js"></script>
+    <script src="js/backbone-validation.js"></script>
     <script src="js/chosen.jquery.min.js"></script>
     <script src="js/jquery.blockUI.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.3/highlight.min.js"></script>
@@ -108,7 +109,9 @@
     
     <!-- external template -->
     <script id="paramTemplate" type="text/template">
-      <label for="parameter-<%= id %>"><%= name %><%= model.get("required")?"<sup>*</sup>":"" %></label>
+      <label for="parameter-<%= id %>"<%= model.get("required")?" class='parameter-required'":(model.get("requiredOrGroup")?" class='parameter-required-or'":"") %>>
+      <%= name %><%= model.get("required") || model.get("requiredOrGroup")?"<sup>*</sup>":"" %>
+      </label>
       <% print(com.xomena.geo.getFormElement(id, name, model)); %>
     </script>
     
