--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
         </div>    
     </div>
     <div id="config"></div>
+    <div id="validation-dialog" title="Validation" class="hidden">
+        <p class="validation-content"></p>
+    </div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
     <script src="http://documentcloud.github.com/underscore/underscore-min.js"></script>
