--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <select id="ws-choose-<%= id %>" name="ws-choose-<%= id %>" class="ws-choose">
                         <option value="">--Please select--</option>  
                         <% services.forEach(function(model){
-                            print('<option value="'+model.get('id')+'">'+model.get('name')+'</option>');
+                            print('<option value="'+model.get('id')+'"'+(model.get('id')==webservice?'  selected':'')+'>'+model.get('name')+'</option>');
                         });
                         %>
                     </select>
