--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 required: listenCondRequired,
                 requiredOr: listenCondRequiredOr
             };
-            print(com.xomena.geo.getFormElement(id, name, model, triggers, listeners)); 
+            print(com.xomena.geo.getFormElement(id, name, model, triggers, listeners, parentInstance)); 
       %>
     </script>
     
