started map implementation

--- a/index.html
+++ b/index.html
@@ -98,7 +98,18 @@
                 </fieldset>
                 <fieldset class="ws-results-fs pure-u-1">
                     <legend>Results</legend>
-                    <div id="ws-result-<%= id %>"  class="ws-result"></div>
+                    <div id="rtabs-<%= id %>" class="tabs">
+                      <ul>
+                        <li><a href="#rtabs-<%= id %>-1">Output</a></li>
+                        <li><a href="#rtabs-<%= id %>-2">Map</a></li>
+                      </ul>
+                      <div id="rtabs-<%= id %>-1">
+                        <div id="ws-result-<%= id %>"  class="ws-result"></div>  
+                      </div>
+                      <div id="rtabs-<%= id %>-2">
+                        <div id="ws-map-<%= id %>" class="map-canvas"></div>
+                      </div>
+                    </div>
                 </fieldset>
                 </div>
             </div>
