--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Web Services APIs</title>
+    <title>Maps Web Services Requests Builder</title>
     <link rel="stylesheet" href="css/geo-ws.css">
     <link rel="stylesheet" href="css/chosen.css">
     <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css" />
@@ -13,7 +13,7 @@
 <body class="yui3-normalized">
     <div class="wrapper ui-widget">
         <header class="ui-widget-header ui-corner-tl ui-corner-tr">
-            <h1>Google Maps Web Services APIs</h1>
+            <h1>Google Maps Web Services Requests Builder</h1>
         </header>
         <div class="ui-widget-content ui-corner-bl ui-corner-br">
            <form id="form-ws" class="pure-form pure-form-aligned">
