--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <link rel="import" href="bower_components/paper-header-panel/paper-header-panel.html">
     <link rel="import" href="bower_components/iron-icons/iron-icons.html">
     <link rel="import" href="bower_components/paper-fab/paper-fab.html">
+    <link rel="import" href="bower_components/paper-icon-button/paper-icon-button.html">
+    <link rel="import" href="bower_components/paper-toolbar/paper-toolbar.html">
 
     <style is="custom-style">
       paper-header-panel {
@@ -39,6 +41,7 @@
       .paper-header h1 {
         -webkit-margin-before: 0;
         -webkit-margin-after: 0;
+        font-size: 24px;
       }
 
       .paper-header h1 .green {
@@ -75,28 +78,17 @@
 
 <body class="yui3-normalized fullbleed layout vertical">
     <paper-header-panel class="blue" mode="waterfall">
-        <div class="paper-header">
-            <header>
+        <paper-toolbar class="paper-header">
+            <header class="title">
                 <h1>G<span class="red">o</span><span class="yellow">o</span>g<span class="green">l</span><span class="red">e</span> Maps Web Services Requests Builder</h1>
             </header>
-        </div>
+            <paper-icon-button icon="settings" title="Settings" id="edit-config"></paper-icon-button>
+        </paper-toolbar>
         <div class="content fill">
-            <div class="wrapper ui-widget">
-                <div class="ui-widget-content ui-corner-bl ui-corner-br">
-                    <form id="form-ws" class="pure-form pure-form-aligned">
-                        <ol id="instances-container">
-                        </ol>
-                        <div class="actions">
-                            <!--button name="add-instance" id="add-instance">
-                                Add new
-                            </button-->
-                            <button name="edit-config" id="edit-config">
-                                <span class="ui-icon ui-icon-wrench"></span>Settings
-                            </button>
-                        </div>
-                    </form>
-                </div>
-            </div>
+            <form id="form-ws" class="pure-form pure-form-aligned">
+                <ol id="instances-container">
+                </ol>
+            </form>
             <paper-fab mini icon="add" title="Add new" tabindex="0" id="add-instance"></paper-fab>
         </div>
     </paper-header-panel>
