--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     <link rel="import" href="bower_components/paper-card/paper-card.html">
     <link rel="import" href="bower_components/paper-button/paper-button.html">
     <link rel="import" href="bower_components/iron-autogrow-textarea/iron-autogrow-textarea.html">
+    <link rel="import" href="bower_components/paper-tabs/paper-tabs.html">
+    <link rel="import" href="bower_components/paper-tabs/paper-tab.html">
+    <link rel="import" href="bower_components/iron-pages/iron-pages.html">
 
     <style is="custom-style">
       paper-header-panel {
@@ -85,6 +88,12 @@
       .ws-url iron-autogrow-textarea {
         width: 100%;
         border: 0 none;
+      }
+
+      paper-tabs {
+        background-color: #7986CB;
+        color: #fff;
+        box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
       }
     </style>
 </head>
@@ -174,19 +183,20 @@
                             </div>
                         </fieldset>
                         <fieldset class="ws-results-fs pure-u-1">
-                            <legend>Results</legend>
-                            <div id="rtabs-<%= id %>" class="tabs">
-                                <ul>
-                                <li><a href="#rtabs-<%= id %>-1">Output</a></li>
-                                <li><a href="#rtabs-<%= id %>-2">Map</a></li>
-                                </ul>
+                            <template id="t-<%= id %>" is="dom-bind">
+                            <paper-tabs selected="{{selected}}">
+                                <paper-tab>Results</paper-tab>
+                                <paper-tab>Map</paper-tab>
+                            </paper-tabs>
+                            <iron-pages selected="{{selected}}">
                                 <div id="rtabs-<%= id %>-1">
                                     <div id="ws-result-<%= id %>"  class="ws-result"></div>
                                 </div>
                                 <div id="rtabs-<%= id %>-2">
                                     <div id="ws-map-<%= id %>" class="map-canvas"></div>
                                 </div>
-                            </div>
+                            </iron-pages>
+                            </template>
                         </fieldset>
                         </div>
                     </div>
