--- a/index.html
+++ b/index.html
@@ -274,6 +274,7 @@
     
     <script src="js/geo-ws-model.js"></script>
     <script src="js/geo-ws.js"></script>
+    <script src="js/geo-map-renderer.js"></script>
     
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
