Directions on the map for JSON

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                                     <div id="ws-result-<%= id %>"  class="ws-result"></div>
                                 </div>
                                 <div id="rtabs-<%= id %>-2">
-                                    <google-map api-key="AIzaSyAe7JGPA_miJHu6DCw1JvJT6jrNElRnwSs" latitude="37.77493" longitude="-122.41942" signed-in="true" version="3" map="{{map}}">
+                                    <google-map api-key="AIzaSyAe7JGPA_miJHu6DCw1JvJT6jrNElRnwSs" latitude="37.77493" longitude="-122.41942" signed-in="true" version="3" libraries="places,geometry" map="{{map}}">
                                     </google-map>
                                 </div>
                             </iron-pages>
