--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1, user-scalable=yes">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <title>Maps Web Services Requests Builder</title>
 
     <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
@@ -34,6 +36,8 @@
     <link rel="import" href="bower_components/paper-dialog/paper-dialog.html">
     <link rel="import" href="bower_components/paper-dialog-scrollable/paper-dialog-scrollable.html">
     <link rel="import" href="bower_components/neon-animation/neon-animations.html">
+    <link rel="import" href="bower_components/paper-progress/paper-progress.html">
+
 
     <style is="custom-style">
       paper-header-panel {
@@ -105,6 +109,17 @@
 
       google-map {
         height: 560px;
+      }
+
+      paper-progress {
+        display: block;
+        width: 100%;
+        margin: 4px 0;
+      }
+
+      paper-progress.red {
+        --paper-progress-active-color: var(--paper-red-500);
+        --paper-progress-secondary-color: var(--paper-red-100);
       }
     </style>
 </head>
@@ -220,6 +235,7 @@
                                 <div id="rtabs-<%= id %>-2">
                                     <google-map api-key="AIzaSyAe7JGPA_miJHu6DCw1JvJT6jrNElRnwSs" latitude="37.77493" longitude="-122.41942" signed-in="true" version="3" libraries="places,geometry" map="{{map}}">
                                     </google-map>
+                                    <paper-progress id="progress-<%= id %>"></paper-progress>
                                 </div>
                             </iron-pages>
                             </template>
