--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <link rel="import" href="bower_components/paper-styles/paper-styles.html">
     <link rel="import" href="bower_components/paper-header-panel/paper-header-panel.html">
     <link rel="import" href="bower_components/iron-icons/iron-icons.html">
+    <link rel="import" href="bower_components/iron-icons/communication-icons.html">
+    <link rel="import" href="bower_components/iron-icons/maps-icons.html">
     <link rel="import" href="bower_components/paper-fab/paper-fab.html">
     <link rel="import" href="bower_components/paper-icon-button/paper-icon-button.html">
     <link rel="import" href="bower_components/paper-toolbar/paper-toolbar.html">
@@ -37,7 +39,11 @@
     <link rel="import" href="bower_components/paper-dialog-scrollable/paper-dialog-scrollable.html">
     <link rel="import" href="bower_components/neon-animation/neon-animations.html">
     <link rel="import" href="bower_components/paper-progress/paper-progress.html">
-
+    <link rel="import" href="bower_components/paper-drawer-panel/paper-drawer-panel.html">
+    <link rel="import" href="bower_components/paper-item/paper-item.html">
+    <link rel="import" href="bower_components/paper-item/paper-icon-item.html">
+    <link rel="import" href="bower_components/paper-menu/paper-menu.html">
+    <link rel="import" href="bower_components/paper-checkbox/paper-checkbox.html">
 
     <style is="custom-style">
       paper-header-panel {
@@ -126,30 +132,60 @@
         width: auto;
         float: left;
       }
+
+      paper-item {
+        --paper-item: {
+            cursor: pointer;
+        };
+      }
     </style>
 </head>
 
 <body class="yui3-normalized fullbleed layout vertical">
-    <paper-header-panel class="blue" mode="waterfall">
-        <paper-toolbar class="paper-header">
-            <header class="title">
-                <h1>
-                    <div class="devsite-product-logo-container">
-                        <img class="devsite-product-logo"  src="https://www.gstatic.com/images/branding/product/1x/maps_64dp.png" alt="Google Maps Web Services Requests Builder">
-                    </div>
-                    G<span class="red">o</span><span class="yellow">o</span>g<span class="green">l</span><span class="red">e</span> Maps Web Services Requests Builder
-                </h1>
-            </header>
-            <paper-icon-button icon="settings" title="Settings" id="edit-config"></paper-icon-button>
-        </paper-toolbar>
-        <div class="content fill">
-            <form id="form-ws" class="pure-form pure-form-aligned">
-                <ol id="instances-container">
-                </ol>
-            </form>
-            <paper-fab mini icon="add" title="Add new" tabindex="0" id="add-instance"></paper-fab>
-        </div>
-    </paper-header-panel>
+    <paper-drawer-panel responsive-width="10000px">
+        <paper-header-panel drawer>
+            <paper-toolbar>
+                <div>Application</div>
+            </paper-toolbar>
+            <div style="width:256px;">
+                <paper-menu id="app-menu">
+                    <paper-item id="app-menu-item-export">
+                        <paper-item-body>
+                            <iron-icon icon="communication:import-export"></iron-icon>
+                            Export requests...
+                        </paper-item-body>
+                    </paper-item>
+                    <paper-item id="app-menu-item-import">
+                        <paper-item-body>
+                            <iron-icon icon="communication:import-export"></iron-icon>
+                            Import requests...
+                        </paper-item-body>
+                    </paper-item>
+                </paper-menu>
+            </div>
+        </paper-header-panel>
+        <paper-header-panel class="blue" mode="waterfall" main>
+            <paper-toolbar class="paper-header">
+                <paper-icon-button icon="menu" paper-drawer-toggle></paper-icon-button>
+                <header class="title">
+                    <h1>
+                        <div class="devsite-product-logo-container">
+                            <img class="devsite-product-logo"  src="https://www.gstatic.com/images/branding/product/1x/maps_64dp.png" alt="Google Maps Web Services Requests Builder">
+                        </div>
+                        G<span class="red">o</span><span class="yellow">o</span>g<span class="green">l</span><span class="red">e</span> Maps Web Services Requests Builder
+                    </h1>
+                </header>
+                <paper-icon-button icon="settings" title="Settings" id="edit-config"></paper-icon-button>
+            </paper-toolbar>
+            <div class="content fill">
+                <form id="form-ws" class="pure-form pure-form-aligned">
+                    <ol id="instances-container">
+                    </ol>
+                </form>
+                <paper-fab mini icon="add" title="Add new" tabindex="0" id="add-instance"></paper-fab>
+            </div>
+        </paper-header-panel>
+    </paper-drawer-panel>
     <paper-dialog id="config" entry-animation="scale-up-animation" exit-animation="fade-out-animation" modal>
       <h2>Settings</h2>
       <paper-dialog-scrollable>
@@ -157,6 +193,18 @@
       <div class="buttons">
         <paper-button dialog-dismiss>Cancel</paper-button>
         <paper-button class="config-save" dialog-confirm autofocus>Save</paper-button>
+      </div>
+    </paper-dialog>
+    <paper-dialog id="export-requests" entry-animation="scale-up-animation" exit-animation="fade-out-animation" modal>
+      <h2>Export requests</h2>
+      <paper-dialog-scrollable>
+          <div id="export-instances" class="list short" role="list">
+
+          </div>
+      </paper-dialog-scrollable>
+      <div class="buttons">
+        <paper-button dialog-dismiss>Cancel</paper-button>
+        <paper-button class="export-save" dialog-confirm autofocus>Save</paper-button>
       </div>
     </paper-dialog>
 
@@ -298,6 +346,23 @@
         </fieldset>
     </script>
     
+    <!-- external template -->
+    <script id="instanceExportTemplate" type="text/template">
+        <paper-icon-item>
+          <paper-checkbox item-icon value="<%= id %>"></paper-checkbox>
+          <div class="flex">
+          <% services.forEach(function(model) {
+                if(model.get('id')==webservice) {
+                    print(model.get('name'));
+                }
+            });
+          %>
+          </div>
+          <iron-icon icon="maps:map"></iron-icon>
+          <iron-autogrow-textarea readonly></iron-autogrow-textarea>
+        </paper-icon-item>
+    </script>
+
     <script src="js/geo-ws-model.js"></script>
     <script src="js/geo-map-renderer.js"></script>
     <script src="js/geo-ws.js"></script>
