--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 </paper-menu>
             </div>
         </paper-header-panel>
-        <paper-header-panel class="blue" mode="waterfall" main>
+        <paper-header-panel class="blue" mode="waterfall" main style="width:100%;">
             <paper-toolbar class="paper-header">
                 <paper-icon-button icon="menu" paper-drawer-toggle></paper-icon-button>
                 <header class="title">
@@ -212,10 +212,10 @@
       <paper-dialog-scrollable>
           <div id="import-instances" class="list short" role="list">
               <paper-icon-item>
-                  <div class="flex">
-                    Select the file
-                  </div>
                   <iron-icon icon="maps:map"></iron-icon>
+                  <div class="flex">
+                    Select the file &nbsp;
+                  </div>
                   <input id="import-file-inp" type="file" accept="text/plain"/>
               </paper-icon-item>
               <paper-icon-item>
