--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <link rel="import" href="bower_components/paper-item/paper-icon-item.html">
     <link rel="import" href="bower_components/paper-menu/paper-menu.html">
     <link rel="import" href="bower_components/paper-checkbox/paper-checkbox.html">
+    <link rel="import" href="bower_components/paper-input/paper-input.html">
 
     <style is="custom-style">
       paper-header-panel {
@@ -349,22 +350,15 @@
     
     <!-- external template -->
     <script id="configTemplate" type="text/template">
-        <fieldset class="app-config-fs">
-            <label for="app-config-api-key">API key</label><br/>
-            <input type="text" name="app-config-api-key" id="app-config-api-key" value="<%= API_KEY %>" placeholder="Please enter your API key" size="40" /><br/>
-            <label for="app-config-client-id">Client ID</label><br/>
-            <input type="text" name="app-config-client-id" id="app-config-client-id" value="<%= CLIENT_ID %>" placeholder="Please enter your client ID" size="40" /><br/>
-            <label for="app-config-crypto-key">Crypto Key</label><br/>
-            <input type="text" name="app-config-crypto-key" id="app-config-crypto-key" value="<%= CRYPTO_KEY %>" placeholder="Please enter your Crypto Key" size="40" /><br/>
-            <label for="app-config-places-api-key">Places for Work API key</label><br/>
-            <input type="text" name="app-config-places-api-key" id="app-config-places-api-key" value="<%= PLACES_API_KEY %>" placeholder="Please enter your Places for Work API key" size="40" /><br/>
-            <label for="app-config-roads-api-key">Roads for Work API key</label><br/>
-            <input type="text" name="app-config-roads-api-key" id="app-config-roads-api-key" value="<%= ROADS_API_KEY %>" placeholder="Please enter your Roads for Work API key" size="40" /><br/>
-            <label for="app-config-server-url">Server URL</label><br/>
-            <input type="text" name="app-config-server-url" id="app-config-server-url" value="<%= SERVER_URL %>" placeholder="Please enter URL for server-side" size="40" /><br/>
-            <label for="app-config-sign-url">Sign URL</label><br/>
-            <input type="text" name="app-config-sign-url" id="app-config-sign-url" value="<%= SIGN_URL %>" placeholder="Please enter URL for digital sign" size="40" />
-        </fieldset>
+        <div class="vertical-section app-config-fs">
+            <paper-input label="API key" type="text" name="app-config-api-key" id="app-config-api-key" value="<%= API_KEY %>" size="40"></paper-input>
+            <paper-input label="Client ID" type="text" name="app-config-client-id" id="app-config-client-id" value="<%= CLIENT_ID %>" size="40"></paper-input>
+            <paper-input label="Crypto Key" type="text" name="app-config-crypto-key" id="app-config-crypto-key" value="<%= CRYPTO_KEY %>" size="40"></paper-input>
+            <paper-input label="Places for Work API key" type="text" name="app-config-places-api-key" id="app-config-places-api-key" value="<%= PLACES_API_KEY %>" size="40"></paper-input>
+            <paper-input label="Roads for Work API key" type="text" name="app-config-roads-api-key" id="app-config-roads-api-key" value="<%= ROADS_API_KEY %>" size="40"></paper-input>
+            <paper-input label="Server URL" type="text" name="app-config-server-url" id="app-config-server-url" value="<%= SERVER_URL %>" size="40"></paper-input>
+            <paper-input label="Digital Signature URL" type="text" name="app-config-sign-url" id="app-config-sign-url" value="<%= SIGN_URL %>" size="40"></paper-input>
+        </div>
     </script>
     
     <!-- external template -->
