updated several components

--- a/index.html
+++ b/index.html
@@ -140,13 +140,17 @@
             cursor: pointer;
         };
       }
+
+        paper-toolbar.left-drawer-toolbar {
+            height: 70px;
+        }
     </style>
 </head>
 
 <body class="yui3-normalized fullbleed layout vertical">
     <paper-drawer-panel responsive-width="10000px">
         <paper-header-panel drawer>
-            <paper-toolbar>
+            <paper-toolbar class="left-drawer-toolbar">
                 <div>Application</div>
             </paper-toolbar>
             <div style="width:256px;">
