--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <title>Maps Web Services Requests Builder</title>
 
+    <script src="bower_components/fontfaceobserver/fontfaceobserver.js"></script>
     <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
 
     <link rel="stylesheet" href="css/geo-ws.css">
@@ -145,6 +146,32 @@
             height: 70px;
         }
     </style>
+    
+    <script>
+      WebFontConfig = {
+        google: { families: [ 'Roboto::greek,latin,vietnamese,cyrillic' ] }
+      };
+      (function() {
+        var wf = document.createElement('script');
+        wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
+          '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+        wf.type = 'text/javascript';
+        wf.async = 'true';
+        var s = document.getElementsByTagName('script')[0];
+        s.parentNode.insertBefore(wf, s);
+      })();
+    
+      var observer = new FontFaceObserver('Roboto', {
+        weight: 400
+      });
+
+      observer.check().then(function () {
+        console.log('Roboto font is available');
+        document.documentElement.classList.add('webfont-loaded');
+      }, function () {
+        console.log('Roboto font is not available. Fallback to default system fonts.');
+      });
+    </script>
 </head>
 
 <body class="yui3-normalized fullbleed layout vertical">
