--- a/index.html
+++ b/index.html
@@ -254,6 +254,11 @@
                   <input id="import-file-inp" type="file" accept="text/plain"/>
               </paper-icon-item>
               <paper-icon-item>
+                <paper-checkbox checked id="auto-exec-import-req" value="auto-exec-import-req">
+                  Automatically execute requests after import
+                </paper-checkbox>
+              </paper-icon-item>
+              <paper-icon-item>
                 <paper-progress id="import-file-progress"></paper-progress>
               </paper-icon-item>
           </div>
@@ -393,6 +398,9 @@
             <paper-input label="Roads for Work API key" type="text" name="app-config-roads-api-key" id="app-config-roads-api-key" value="<%= ROADS_API_KEY %>" size="40"></paper-input>
             <paper-input label="Server URL" type="text" name="app-config-server-url" id="app-config-server-url" value="<%= SERVER_URL %>" size="40"></paper-input>
             <paper-input label="Digital Signature URL" type="text" name="app-config-sign-url" id="app-config-sign-url" value="<%= SIGN_URL %>" size="40"></paper-input>
+            <paper-checkbox <%= AUTO_EXEC_ONLOAD ? 'checked' : '' %> id="app-config-exec-onload" value="app-config-exec-onload">
+                  Automatically execute stored requests on page load
+            </paper-checkbox>
         </div>
     </script>
     
