--- a/index.html
+++ b/index.html
@@ -144,15 +144,22 @@
         };
       }
 
-        paper-toolbar.left-drawer-toolbar {
-            height: 70px;
-        }
+      paper-toolbar.left-drawer-toolbar {
+        height: 70px;
+      }
 
-        paper-tooltip {
-            --paper-tooltip-background: black;
-            --paper-tooltip-text-color: var(--paper-pink-100);
-            width: 260px;
-        }
+      paper-tooltip {
+        --paper-tooltip-background: black;
+        --paper-tooltip-text-color: white;
+        width: 260px;
+        font-size: 11px;
+      }
+        
+      iron-icon.tip {
+        --iron-icon-height: 18px;
+        --iron-icon-width: 18px;
+        color: grey;
+      }
     </style>
     
     <script>
