improved initial loading in FireFox

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     </script>
 </head>
 
-<body class="yui3-normalized fullbleed layout vertical">
+<body class="yui3-normalized fullbleed layout vertical wait-init">
     <paper-drawer-panel responsive-width="10000px">
         <paper-header-panel drawer>
             <paper-toolbar class="left-drawer-toolbar">
