support extension id

--- a/index.html
+++ b/index.html
@@ -421,6 +421,7 @@
             <paper-input label="Roads for Work API key" type="text" name="app-config-roads-api-key" id="app-config-roads-api-key" value="<%= ROADS_API_KEY %>" size="40"></paper-input>
             <paper-input label="Server URL" type="text" name="app-config-server-url" id="app-config-server-url" value="<%= SERVER_URL %>" size="40"></paper-input>
             <paper-input label="Digital Signature URL" type="text" name="app-config-sign-url" id="app-config-sign-url" value="<%= SIGN_URL %>" size="40"></paper-input>
+            <paper-input label="Maps Support ID" type="text" name="app-config-ext-id" id="app-config-ext-id" value="<%= EXT_ID %>" size="40"></paper-input>
             <paper-checkbox <%= AUTO_EXEC_ONLOAD ? 'checked' : '' %> id="app-config-exec-onload" value="app-config-exec-onload">
                   Automatically execute stored requests on page load
             </paper-checkbox>
