--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="bower_components/fontfaceobserver/fontfaceobserver.js"></script>
     <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
 
-    <link rel="stylesheet" href="bower_components/chosen/chosen.min.css">
+    <link rel="stylesheet" href="bower_components/chosen/chosen.css">
     <link rel="stylesheet" href="bower_components/jquery-ui/themes/smoothness/jquery-ui.min.css" />
     <link rel="stylesheet" href="bower_components/highlight/src/styles/googlecode.css">
     <link rel="stylesheet" href="bower_components/highlight/src/styles/github.css">
@@ -301,11 +301,11 @@
     <script src="bower_components/backbone/backbone-min.js"></script>
     <script src="bower_components/backbone.validation/dist/backbone-validation-min.js"></script>
     <script src="bower_components/backbone.localStorage/backbone.localStorage-min.js"></script>
-    <script src="bower_components/chosen/chosen.jquery.min.js"></script>
+    <script src="bower_components/chosen/chosen.jquery.js"></script>
     <script src="bower_components/blockUI/jquery.blockUI.js"></script>
     <script src="bower_components/highlight/build/highlight.pack.js"></script>
     <script src="bower_components/jem.js/jem.js"></script>
-    <script src="bower_components/datetimepicker/jquery.datetimepicker.js"></script>
+    <script src="bower_components/datetimepicker/build/jquery.datetimepicker.full.js"></script>
     
     <!-- external template -->
     <script id="instanceTemplate" type="text/template">
