geocoder tool link

--- a/index.html
+++ b/index.html
@@ -371,6 +371,7 @@
                             <iron-pages selected="{{selected}}">
                                 <div id="rtabs-<%= id %>-1">
                                     <div id="ws-result-<%= id %>"  class="ws-result"></div>
+                                    <div id="ws-tools-links-<%= id %>" class="ws-tools-links"></div>
                                 </div>
                                 <div id="rtabs-<%= id %>-2">
                                     <google-map api-key="AIzaSyAe7JGPA_miJHu6DCw1JvJT6jrNElRnwSs" latitude="37.77493" longitude="-122.41942" <%= typeof InstallTrigger === 'undefined' ? 'signed-in="true"' : '' %> version="3" libraries="places,geometry" map="{{map}}">
