--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                 <div class="pure-g two-cols">
                     <div class="pure-u-1 pure-u-lg-11-24">
                         <div class="pure-g">
-                        <fieldset class="ws-version-fs pure-u-23-24 pure-u-xl-11-24">
+                        <fieldset class="ws-version-fs pure-u-23-24 pure-u-xl-11-24" id="ws-version-fs-<%= id %>">
                             <legend>Select the version</legend>
                             <label for="ws-version-free-<%= id %>" class="pure-radio">
                                 <input type="radio" name="ws-version-val-<%= id %>" id="ws-version-free-<%= id %>" <% print(version==='free'?'checked="checked"':''); %> value="free" />
