Clone the instance

--- a/index.html
+++ b/index.html
@@ -388,6 +388,7 @@
             <div id="instance-action-<%= id %>" class="card-actions">
                 <paper-button id="exec-instance-<%= id %>" class="exec" disabled>Execute</paper-button>
                 <paper-button id="remove-instance-<%= id %>" class="delete">Remove</paper-button>
+                <paper-button id="clone-instance-<%= id %>" class="clone" disabled>Clone</paper-button>
             </div>
         </paper-card>
         <span class="ui-icon ui-icon-carat-2-n-s ws-toggle"></span>
