--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="bower_components/fontfaceobserver/fontfaceobserver.js"></script>
     <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
 
+    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
     <link rel="stylesheet" href="bower_components/chosen/chosen.css">
     <link rel="stylesheet" href="bower_components/jquery-ui/themes/smoothness/jquery-ui.min.css" />
     <link rel="stylesheet" href="bower_components/highlight/src/styles/googlecode.css">
